Finished part 2 of task 3

--- a/aoc1/aoc1/aoc1.fsproj
+++ b/aoc1/aoc1/aoc1.fsproj
@@ -6,6 +6,10 @@
     <DebugType>portable</DebugType>
   </PropertyGroup>
   <ItemGroup>
+    <Content Include="input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Compile Include="aoc1.fs" />
   </ItemGroup>
+  <ItemGroup />
 </Project>
