Started day 11 part 1 Reformatted some code

--- a/aoc1/aoc1.fsproj
+++ b/aoc1/aoc1.fsproj
@@ -11,5 +11,5 @@
     </Content>
     <Compile Include="aoc1.fs" />
   </ItemGroup>
-  <ItemGroup />
+  <Import Project="..\.paket\Paket.Restore.targets" />
 </Project>
